ch(sequelize):remove sequelize product folers

--- a/app.properties
+++ b/app.properties
@@ -1,12 +1,12 @@
-project.name:
-project.repo:
-project.sdgs:
-project.app.url:
-project.codacy.url:
+project.name:Power Sophia
+project.repo:https://github.com/BuildForSDG/Team-032-Product
+project.sdgs:sdg goal 4
+project.app.url:https://power-sophia-dev.herokuapp.com
+project.codacy.url:https://app.codacy.com/gh/BuildForSDG/Team-032-Product
 
-project.team.members:
-project.team.slackname:
+project.team.members:Akanji Oluwatobiloba, Adebayo Oyeleye, Edafe Oghenefego, Segun Adeyemi, Kadiri Sunday Eshiomonu
+project.team.slackname:team-032
 
-project.fb.opensource:
+project.fb.opensource:React.js
 
 program.cohort:1
