--- a/.travis.yml
+++ b/.travis.yml
@@ -24,12 +24,12 @@ env:
     - DB_PASSWORD=
 script:
   - npm test
-# deploy:
-#   - cleanup: false
-#     provider: heroku
-#     api_key:
-#       secure: ""
-#     app: howmies-api-develop
-#     on:
-#       repo: Howmies/howmies-api
-#       branch: bg-cookie-#73
+deploy:
+  - cleanup: false
+    provider: heroku
+    api_key:
+      secure: ""
+    app: howmies-api-develop
+    on:
+      repo: Howmies/howmies-api
+      branch: develop
