--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cover": "jest --coverage",
     "lint": "eslint \"src/**/*.js\"",
-    "start": "parcel ./src/index.html"
+    "start": "parcel ./src/index.html",
+    "dev": "nodemon server.js",
+    "host": "git push heroku develop:master",
+    "tails": "heroku logs --tail"
   },
   "author": {
     "name": "Build For SDG",
