--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "boilerplate"
   ],
   "private": false,
-  "main": "dist/index.js",
+  "main": "./src/server.js",
   "types": "dist/index.d.ts",
   "directories": {
     "test": "__tests__"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnoreatterns": [
+      "/node_modules/"
+    ]
   },
   "scripts": {
     "test": "jest",
@@ -18,7 +24,7 @@
     "test:cover": "jest --coverage",
     "lint": "eslint \"src/**/*.js\"",
     "start": "parcel ./src/index.html",
-    "dev": "nodemon server.js",
+    "dev": "nodemon ./src/server.js",
     "host": "git push heroku develop:master",
     "tails": "heroku logs --tail"
   },
@@ -61,7 +67,8 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "jest": "^25.4.0",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "supertest": "^4.0.2"
   },
   "browserslist": [
     "last 1 Chrome versions"
