--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
   - postgresql
 before_script:
   - psql -c 'create database edventure;' -U postgres
-  - psql "dbname=edventure" -a -f init.sql
+  - psql "dbname=edventure" -a -f init.pgsql
 addons:
   postgresql: "10"
   apt:
