--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jsonwebtoken": "^8.5.1",
     "mailgen": "^2.0.13",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.8",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "pg": "^8.2.1",
