bg(env):adds environemnt variables in travis[Fixes #12 #13]

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,10 @@ env:
     - TEST_DB_DATABASE=edventure
     - TEST_DB_PORT=5432
     - TEST_DB_PASSWORD=
+    - MAILTRAP_SMTP_USERNAME = ca1426eb7c3c86
+    - MAILTRAP_SMTP_PASSWORD = c132f5f81adf26
+    - RSA_PRIVATE_KEY=-----BEGIN RSA PRIVATE KEY-----||n||MIICXAIBAAKBgQCW6U0V5KPlYof+cAGjZtHaCL4DQhXUGRHgCqIel86JULOe7eo3||n||QbRjg6mn4IqZ8KpA6YlYlhMh5QwkFB0q9GVK6uPI8IQMGdpFU2K8SXcK2BJAMNp+||n||fFgmlG9m3DGoQxyhyuWb6PxLlRGQuNUFrk9asUz+9NU9FQHbuTFSgoZNyQIDAQAB||n||AoGACVi7wH5ftEZM+/I997vXhXSDKDqAlZlT5RdjgReP4CtSZKaBmhiErqEp8c7T||n||ZsNkGA8exZDN8Ix6GwXv5IgsecVrG66zN9szkAFITgFoogI2z2DtmvcLfad9vLvn||n||lNDx3LzK0OvhYiiLNxQx7rHIXZ9TgBEg2jR/cDRcboz7sbECQQD1z/t0fqthtPpy||n||NTkmCz+io8/BAcLQWu2xv/xsU9eacJScBrMvUdzWDMydTU5qCdCBrIEKFUp08ftb||n||Jgevu+PNAkEAnSpwN2hMkthVnHmurK7/8dUEKaapl8cwwClQuiSIqcO5Ab2wfHgJ||n||lkCEUXQ7+7zXl47e4Op/sKv+Jh/Lpg8N7QJAaHz6NHDLxQK7GuUI3+UULbxYSYDI||n||IO0l8NLdJ+cT1PBaG2C1tj2kE9DpAUylMmntmdGMII8gUUmzQPGPfuHtWQJAP8pB||n||0btbmR6FYQViiGRfLeCv19f1bc1DVDtwsJyze3QdWz+KqnpuKbX1/rmWvw5e0v0C||n||KXgEa8jjVsYA+l2R4QJBAMFC5k7tIxdMN+ju+mhS/AeRtCelZ0iNc8zMiTEbejNZ||n||uD78tcwD1QkTe7jGw9N1dVGF9YSVReRjSrfUIzlikL4=||n||-----END RSA PRIVATE KEY-----
+
 script:
   - npm test
 deploy:
